--- a/application/views/onlinetest/result.html
+++ b/application/views/onlinetest/result.html
@@ -42,7 +42,7 @@
                     <p class="text-warning">You have Got {echo $participant->score}% Marks. Good work keep it up.</p>
                     <p>
                         {if isset($user)}
-                            <a href="https://www.linkedin.com/profile/add?_ed=0_ZcIwGCXmSQ8TciBtRYgI1j4OsllETrtl_xajtrVc5LaaImXEsXtVW49ekKQ2HJFTaSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv&pfCertificationName={echo urlencode($test->title)}&pfCertificationUrl={echo urlencode(URL)}&pfLicenseNo={echo $certificate->uniqid}&pfCertStartDate={echo $created}&trk=onsite_longurl" target="_blank" class="btn btn-primary"><i class="fa fa-linkedin-square fa-lg"></i> Add to profile</a>
+                            <a href="https://www.linkedin.com/profile/add?_ed=0_ZcIwGCXmSQ8TciBtRYgI1j4OsllETrtl_xajtrVc5LaaImXEsXtVW49ekKQ2HJFTaSgvthvZk7wTBMS3S-m0L6A6mLjErM6PJiwMkk6nYZylU7__75hCVwJdOTZCAkdv&pfCertificationName={echo urlencode($test->title)}&pfCertificationUrl={echo urlencode(URL)}&pfLicenseNo={echo $certificate->uniqid}&pfCertStartDate={echo $certificate->created}&trk=onsite_longurl" target="_blank" class="btn btn-primary"><i class="fa fa-linkedin-square fa-lg"></i> Add to profile</a>
                         {/if}
                         <a href="/onlinetest/certificate/{echo $certificate->uniqid}.png" download class="btn btn-success"><i class="fa fa-download fa-fw"></i> Download Certificate</a>
                     </p>
