--- a/application/views/layouts/student.html
+++ b/application/views/layouts/student.html
@@ -107,8 +107,7 @@
                 <h4><i class="fa fa-user fa-lg"></i> Students</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="/student/register" class="whitetext">Register</a></li>
-                    <li><a href="/student/recommends" class="whitetext">Apply Internships</a></li>
+                    <li><a href="/students/register" class="whitetext">Register</a></li>
                     <li><a href="/resume-for-internship" class="whitetext">Resume for Internship</a></li>
                     <li><a href="/onlinetest" class="whitetext">Online Test</a></li>
                     <li><a href="/placement-papers" class="whitetext">See Placement Papers</a></li>
@@ -119,11 +118,11 @@
                 <h4><i class="fa fa-fax fa-lg"></i> Internships</h4>
                 <nav>
                 <ul class="list-unstyled list-social-icons">
-                    <li><a href="/internship-in-delhi" class="whitetext">Internship in Delhi</a></li>
-                    <li><a href="/software-internship" class="whitetext">Internship for Computer</a></li>
-                    <li><a href="/deisgn-internship" class="whitetext">Designing Internship</a></li>
-                    <li><a href="/marketing-sales-internship" class="whitetext">Marketing Internship</a></li>
-                    <li><a href="/internship-for-law-students" class="whitetext">Internship for Law</a></li>
+                    <li><a href="/home?location=delhi" class="whitetext">Internship in Delhi</a></li>
+                    <li><a href="/home?query=web" class="whitetext">Internship for Computer</a></li>
+                    <li><a href="/home?query=designing" class="whitetext">Designing Internship</a></li>
+                    <li><a href="/home?query=market" class="whitetext">Marketing Internship</a></li>
+                    <li><a href="/home?location=mumbai" class="whitetext">Internship in Mumbai</a></li>
                 </ul>
                 </nav>
             </div>
@@ -139,6 +138,17 @@
                 </ul>
                 </nav>
             </div>
+        </div>
+            <hr>
+            <p>
+                <button class="whitetext btn btn-success btn-xs" name="message" value=""><i class="fa fa-comments-o fa-fw"></i> Got a Question?</button>
+                <span class="pull-right">
+                    <a href="http://www.swiftdeal.org/" class="whitetext"><i class="fa fa-copyright fa-fw"></i> SwiftDeal Online LLP.</a>
+                </span>
+            </p>
+            <p class="text-center">
+                <i class="fa fa-credit-card fa-lg"></i> <i class="fa fa-cc-visa fa-lg"></i> <i class="fa fa-cc-mastercard fa-lg"></i> <i class="fa fa-cc-discover fa-lg"></i>
+            </p>
         </div>
 
     </footer>
