--- a/application/views/students/applications.html
+++ b/application/views/students/applications.html
@@ -6,7 +6,7 @@
             <li><a href="/students">Profile</a></li>
             <li class="active">Applications</li>
         </ol>
-
+        <p class="text-warning" id="status">The Status of the Application to various internship you applied.</p>
         <div class="panel panel-default">
             <div class="panel-heading">
                 <i class="fa fa-check-square fa-fw"></i> Applications
