--- a/application/views/home/privacy.html
+++ b/application/views/home/privacy.html
@@ -2,11 +2,11 @@
     <div class="container">
         <div class="row">
             <article class="content-inner-detail">
+                <h1 class="page-header text-center">Privacy Policy</h1>
                 <nav><ol class="breadcrumb">
                         <li><a href="home">Home</a></li>
                         <li class="active">Privacy Policy</li>
                     </ol></nav>
-                <h1 class="sub-heading">Privacy Policy</h1>
                 <!-- START PRIVACY POLICY CODE -->
                 <div style="font-family:arial">
                     <strong>What information do we collect?</strong> <br /><br />We collect information from you when you register on our site, place an order, subscribe to our newsletter, respond to a survey or fill out a form.  <br /><br />When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address or phone number. You may, however, visit our site anonymously.<br /><br />Google, as a third party vendor, uses cookies to serve ads on your site.
