--- a/application/views/home/termsofservice.html
+++ b/application/views/home/termsofservice.html
@@ -2,11 +2,11 @@
     <div class="container">
         <div class="row">
             <article class="content-inner-detail">
+                <h1 class="page-header text-center">SwiftIntern Terms and Conditions ("Agreement")</h1>
                 <nav><ol class="breadcrumb">
                         <li><a href="home">Home</a></li>
                         <li class="active">Terms</li>
                     </ol></nav>
-                <h1 class="sub-heading">SwiftIntern Terms and Conditions ("Agreement")</h1>
                 <h2>This Agreement was last modified on May 14, 2014.</h2>
                 <p>Please read these Terms and Conditions ("Agreement", "Terms and Conditions") carefully before using www.swiftintern.com ("the Site") operated by Swiftdeal onlin LLP ("us", "we", or "our"). This Agreement sets forth the legally binding terms and conditions for your use of the Site at www.swiftintern.com.</p>
                 <p>By accessing or using the Site in any manner, including, but not limited to, visiting or browsing the Site or contributing content or other materials to the Site, you agree to be bound by these Terms and Conditions. Capitalized terms are defined in this Agreement.</p>
