--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -19,12 +19,13 @@
             </div>
             <div class="form-group">
                 <label>Email address</label>
-                <input name="email" type="email" class="form-control" placeholder="Enter email">
+                <input name="propertyid" type="email" class="form-control" placeholder="Enter email">
             </div>
             <div class="form-group">
                 <label>Message</label>
                 <textarea name="body" class="form-control" placeholder="Enter Message explaining the problem" rows="3"></textarea>
             </div>
+            <input type="hidden" name="property" value="email">
             <input type="hidden" name="action" value="contact">
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
