--- a/application/views/home/contact.html
+++ b/application/views/home/contact.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label>Email address</label>
-                <input name="propertyid" type="email" class="form-control" placeholder="Enter email">
+                <input name="property_id" type="email" class="form-control" placeholder="Enter email">
             </div>
             <div class="form-group">
                 <label>Message</label>
