--- a/application/views/admin/search.html
+++ b/application/views/admin/search.html
@@ -1,20 +1,25 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
         <h1 class="page-header text-center">Search</h1>
-        <form class="form-inline text-center" role="form" method="post" action="/admin/search" id="search">
+        <form class="form-inline text-center" role="form" method="get" action="">
             <div class="form-group">
                 <div class="input-group">
                     <label class="sr-only">Table</label>
-                    <select name="model" class="form-control">
+                    <select name="model" class="form-control" value="{$model}">
                         <option value="answer">Answers</option>
                         <option value="application">Applications</option>
+                        <option value="bankaccount">BankAccounts</option>
                         <option value="blog">BlogPosts</option>
                         <option value="certificate">Certificates</option>
+                        <option value="conversation">Conversations</option>
                         <option value="crm">CRM Leads</option>
                         <option value="experience">Experiences</option>
                         <option value="follow">Followers</option>
+                        <option value="image">Images</option>
+                        <option value="lead">Leads</option>
                         <option value="member">Members</option>
                         <option value="message">Messages</option>
+                        <option value="meta">Metas</option>
                         <option value="newsletter">Newsletters</option>
                         <option value="opportunity">Opportunities</option>
                         <option value="option">Options</option>
@@ -39,16 +44,15 @@
             <div class="form-group">
                 <div class="input-group">
                     <label class="sr-only">Field</label>
-                    <input type="text" style="width: 100px" name="key" class="form-control" placeholder="Field" value="id" />
+                    <input type="text" style="width: 100px" name="key" class="form-control" placeholder="Field" value="{$property}" />
                 </div>
             </div>
             <div class="form-group">
                 <div class="input-group">
                     <label class="sr-only">Keyword</label>
-                    <input type="text" style="width: 300px" name="value" class="form-control" placeholder="value..." />
+                    <input type="text" style="width: 300px" name="value" class="form-control" placeholder="value..." value="{$val}" />
                 </div>
             </div>
-            <input type="hidden" name="action" value="search">
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
         <hr>
@@ -58,26 +62,39 @@
             </div>
             <div class="panel panel-body text-center" id="result_status">
                 {if(isset($success))}
-                    {echo $success}
+                {echo $success}
                 {/if}
                 {else}
-                    Select field to search and enter keyword and then click on search button to see results.
+                    Select field to search and enter keyword and then click on search button to see results. For Fields list see <a href="https://raw.githubusercontent.com/Swiftintern/DBArchitecture/master/swiftintern.png" target="_blank">here</a>
                 {/else}
             </div>
-            <table class="table table-hover table-striped">
-                <tbody id="results">
-                {foreach $result in $results}
-                    {script $vars = $result->getJsonData()}
-                    {foreach $var in $vars}
+            <table class="table table-striped text-center table-hover table-bordered">
+                <thead>
+                    <tr>
+                        {foreach $value in $values}
+                        <th>{$value}</th>
+                        {/foreach}
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {foreach $item in $items}
                         <tr>
-                            <td>{echo $var}</td>
+                        {foreach $value in $values}
+                            <td>{echo $item[$value]}</td>
+                        {/foreach}
+                        <td>
+                            <a href="/admin/update/{$model}/{echo $item[id]}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Edit</a>
+                        </td>
                         </tr>
                     {/foreach}
-                    <hr>
-                {/foreach}
                 </tbody>
             </table>
-            <div id="after_results" class="text-center"></div>
+            <div class="text-center">
+                {if($count > 10)}
+                <a href="{echo URL}&page={echo $page+1}" class="btn btn-primary">Load More</a>
+                {/if}
+            </div>
         </div>
     </div>
 </div>
